[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = "As the name says, playground repo for python stuff"
authors = ["Pavlo <paulsegfault@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

Flask = "^3.0.0"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"
flask-sqlalchemy = "^3.1.1"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"
pytest = "^7.4.3"
pytest-black = "^0.3.12"
python-dotenv = "^1.0.0"
pytest-ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
